# fastapi-sqlalchemy-boilerplate

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  gunicorn.conf.py  pyproject.toml  requirements.txt
docker_compose/: app.yml  storages.yml
src/application/protocols/: transaction_context.py
src/domain/common/: entities.py  events.py  exceptions.py
src/infra/: main_config.py
src/infra/database/: config.py
src/infra/database/core/: auto_close_async_session.py  connections_manager.py  protocols.py  transaction_context.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 2024_10_26_1636-c81cfc11b8c9_empty_initial.py  2024_10_29_1845-cdfe422c01ba_add_uuid_generate_v4_function.py
src/infra/database/models/: __init__.py  base.py  mixins.py
src/infra/database/repositories/: generic_repository.py  mixins.py
src/infra/di/: container.py
src/infra/di/providers/: __init__.py  config.py  database.py
src/infra/log/: config.py  formatter.py  main.py
src/main/: __init__.py
src/presentation/web_api/: exc_handlers.py  main.py
src/presentation/web_api/handlers/: docs.py  healthcheck.py  main.py
src/presentation/web_api/handlers/requests/: pagination.py
src/presentation/web_api/handlers/responses/: common.py  custom_orjson.py
