[tool.poetry]
name = "fastapi-sqlalchemy-boilerplate"
version = "0.1.0"
description = ""
authors = ["artyomklg <artem0801200269@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
dishka = "^1.4.0"
orjson = "^3.10.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.7.1"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"


[tool.ruff]
line-length = 100
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
